feat(conversion): controller endpoint and conversion service with BigDecimal currency value conversion